# cpp-entitlements-sync

./: .gitignore  README.md  databricks.yml  pyproject.toml
config/: config.example.yaml  config.yaml
docs/: architecture.md  auth.md  mappings.md  project-overview-keynote.html  project-overview.html
docs/slides-css/: databricks.css
scripts/: run_local.py  run_reconciler.py  run_sync.py
src/entitlements_sync/: __init__.py  audit.py  boto_lf_reader.py  cli.py  cloudtrail.py  databricks_uc.py  delta_audit.py  identity.py  lf_reader.py  models.py  orchestrator.py  privilege_mapping.py  reconciler.py  sql_audit.py  target_builder.py  uc_client.py
src/entitlements_sync/translators/: abac_policy.py  grant.py  tag.py
tests/: test_abac_translator.py  test_audit.py  test_boto_lf_reader.py  test_cli.py  test_cloudtrail.py  test_databricks_uc.py  test_delta_audit.py  test_e2e_scenarios.py  test_grant_translator.py  test_identity.py  test_lf_reader.py  test_models.py  test_orchestrator.py  test_privilege_mapping.py  test_reconciler.py  test_sql_audit.py  test_tag_translator.py  test_target_builder.py  test_uc_client.py
tests/fixtures/: identity_mapping.json
tests/fixtures/lf_events/: add_lftags_to_resource.json  create_lf_tag.json  delete_lf_tag.json  grant_permissions.json  remove_lftags_from_resource.json  revoke_permissions.json
