[project]
name = "entitlements-sync"
version = "0.2.0"
description = "LF -> UC entitlements sync engine (CPP POC)"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.34",
    "databricks-sdk>=0.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
]
spark = [
    # Only needed when running the DeltaAuditSink outside Databricks runtime.
    # On Databricks Jobs, pyspark is already on the classpath.
    "pyspark>=3.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/entitlements_sync"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.ruff]
line-length = 100
target-version = "py311"
