[project]
name = "entitlements-sync"
version = "0.3.0"
description = "LF -> UC entitlements sync engine (CPP POC)"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.34",
    "databricks-sdk>=0.30",
    "pyyaml>=6",
]

[project.scripts]
entitlements-sync = "entitlements_sync.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/entitlements_sync"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.ruff]
line-length = 100
target-version = "py311"
